--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "autoprefixer": "^10.4.16",
     "filename-regex": "^2.0.1",
     "laravel-mix": "^6.0.49",
+    "laravel-mix-replace-in-file": "^0.1.0",
     "laravel-mix-string-replace": "^0.1.0",
     "mix-html-builder": "^0.9.1",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
+    "replace-in-file": "^7.0.1",
     "string-replace-loader": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1"
@@ -25,9 +27,11 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.27",
     "alpinejs": "^3.13.1",
+    "del": "^7.1.0",
     "gsap": "npm:@gsap/simply@^3.12.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.3"
   }
 }
