--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "browser-sync": "^2.29.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "filename-regex": "^2.0.1",
     "laravel-mix": "^6.0.49",
     "laravel-mix-replace-in-file": "^0.1.0",
@@ -33,6 +35,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "rimraf": "^5.0.5",
+    "sp-supermarquee": "^2.0.0",
     "tailwindcss": "^3.3.3"
   }
 }
