menu y renta_vitalicia

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -29,8 +29,11 @@
     "/prod/assets/images/img_anciana.webp": "/prod/assets/images/img_anciana.webp",
     "/prod/assets/images/img_atencion_1.png": "/prod/assets/images/img_atencion_1.png",
     "/prod/assets/images/img_atencion_2.png": "/prod/assets/images/img_atencion_2.png",
+    "/prod/assets/images/img_call_center.webp": "/prod/assets/images/img_call_center.webp",
     "/prod/assets/images/img_gestion.png": "/prod/assets/images/img_gestion.png",
     "/prod/assets/images/img_gestion.webp": "/prod/assets/images/img_gestion.webp",
+    "/prod/assets/images/img_ilus_renta_inv.webp": "/prod/assets/images/img_ilus_renta_inv.webp",
+    "/prod/assets/images/img_ilus_renta_sob.webp": "/prod/assets/images/img_ilus_renta_sob.webp",
     "/prod/assets/images/img_nino.webp": "/prod/assets/images/img_nino.webp",
     "/prod/assets/images/img_novedades_1.png": "/prod/assets/images/img_novedades_1.png",
     "/prod/assets/images/img_novedades_1.webp": "/prod/assets/images/img_novedades_1.webp",
