--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,85 +1,4 @@
 {
     "/dist/assets/js/app.js": "/dist/assets/js/app.js",
-    "/dist/assets/css/app.css": "/dist/assets/css/app.css",
-    "/prod/assets/css/app.css": "/prod/assets/css/app.css",
-    "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
-    "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
-    "/prod/assets/fonts/33112a1a3babe854-s.p.woff": "/prod/assets/fonts/33112a1a3babe854-s.p.woff",
-    "/prod/assets/fonts/60964256366d74f2-s.p.woff": "/prod/assets/fonts/60964256366d74f2-s.p.woff",
-    "/prod/assets/fonts/7d16627dbfbbee5d-s.p.woff": "/prod/assets/fonts/7d16627dbfbbee5d-s.p.woff",
-    "/prod/assets/fonts/87cbde00c95e8478-s.p.woff": "/prod/assets/fonts/87cbde00c95e8478-s.p.woff",
-    "/prod/assets/fonts/ce9abbd2222b7882-s.p.woff": "/prod/assets/fonts/ce9abbd2222b7882-s.p.woff",
-    "/prod/assets/fonts/e86cc954d8c82a89-s.p.woff": "/prod/assets/fonts/e86cc954d8c82a89-s.p.woff",
-    "/prod/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/prod/assets/fonts/ee0063ed4c3236ca-s.p.woff",
-    "/prod/assets/images/ILUS1.webp": "/prod/assets/images/ILUS1.webp",
-    "/prod/assets/images/ILUS2.webp": "/prod/assets/images/ILUS2.webp",
-    "/prod/assets/images/ILUS3.webp": "/prod/assets/images/ILUS3.webp",
-    "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
-    "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
-    "/prod/assets/images/blog/blog_1.jpg": "/prod/assets/images/blog/blog_1.jpg",
-    "/prod/assets/images/blog/blog_1.webp": "/prod/assets/images/blog/blog_1.webp",
-    "/prod/assets/images/blog/blog_2.jpg": "/prod/assets/images/blog/blog_2.jpg",
-    "/prod/assets/images/blog/blog_2.webp": "/prod/assets/images/blog/blog_2.webp",
-    "/prod/assets/images/blog/blog_3.jpg": "/prod/assets/images/blog/blog_3.jpg",
-    "/prod/assets/images/blog/blog_3.webp": "/prod/assets/images/blog/blog_3.webp",
-    "/prod/assets/images/blog/blog_4.jpg": "/prod/assets/images/blog/blog_4.jpg",
-    "/prod/assets/images/blog/blog_4.webp": "/prod/assets/images/blog/blog_4.webp",
-    "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
-    "/prod/assets/images/home_elements.svg": "/prod/assets/images/home_elements.svg",
-    "/prod/assets/images/img_anciana.webp": "/prod/assets/images/img_anciana.webp",
-    "/prod/assets/images/img_atencion_1.png": "/prod/assets/images/img_atencion_1.png",
-    "/prod/assets/images/img_atencion_2.png": "/prod/assets/images/img_atencion_2.png",
-    "/prod/assets/images/img_call_center.webp": "/prod/assets/images/img_call_center.webp",
-    "/prod/assets/images/img_gestion.png": "/prod/assets/images/img_gestion.png",
-    "/prod/assets/images/img_gestion.webp": "/prod/assets/images/img_gestion.webp",
-    "/prod/assets/images/img_ilus_renta_inv.webp": "/prod/assets/images/img_ilus_renta_inv.webp",
-    "/prod/assets/images/img_ilus_renta_sob.webp": "/prod/assets/images/img_ilus_renta_sob.webp",
-    "/prod/assets/images/img_nino.webp": "/prod/assets/images/img_nino.webp",
-    "/prod/assets/images/img_novedades_1.png": "/prod/assets/images/img_novedades_1.png",
-    "/prod/assets/images/img_novedades_1.webp": "/prod/assets/images/img_novedades_1.webp",
-    "/prod/assets/images/img_novedades_2.png": "/prod/assets/images/img_novedades_2.png",
-    "/prod/assets/images/img_novedades_2.webp": "/prod/assets/images/img_novedades_2.webp",
-    "/prod/assets/images/img_novedades_3.png": "/prod/assets/images/img_novedades_3.png",
-    "/prod/assets/images/img_novedades_3.webp": "/prod/assets/images/img_novedades_3.webp",
-    "/prod/assets/images/img_proposito.png": "/prod/assets/images/img_proposito.png",
-    "/prod/assets/images/img_proposito.webp": "/prod/assets/images/img_proposito.webp",
-    "/prod/assets/images/img_renta.png": "/prod/assets/images/img_renta.png",
-    "/prod/assets/images/img_seguro.png": "/prod/assets/images/img_seguro.png",
-    "/prod/assets/images/img_sp_auxilio.webp": "/prod/assets/images/img_sp_auxilio.webp",
-    "/prod/assets/images/img_sp_incapacidad.webp": "/prod/assets/images/img_sp_incapacidad.webp",
-    "/prod/assets/images/mano_paraque.png": "/prod/assets/images/mano_paraque.png",
-    "/prod/assets/images/mano_paraque.webp": "/prod/assets/images/mano_paraque.webp",
-    "/prod/assets/images/mano_porque.png": "/prod/assets/images/mano_porque.png",
-    "/prod/assets/images/mano_porque.webp": "/prod/assets/images/mano_porque.webp",
-    "/prod/assets/images/novedades.png": "/prod/assets/images/novedades.png",
-    "/prod/assets/images/quees_renta_vitalicia.png": "/prod/assets/images/quees_renta_vitalicia.png",
-    "/prod/assets/images/quees_renta_vitalicia.webp": "/prod/assets/images/quees_renta_vitalicia.webp",
-    "/prod/assets/images/quees_seguro_revisional.webp": "/prod/assets/images/quees_seguro_revisional.webp",
-    "/prod/assets/images/svg_anciana.svg": "/prod/assets/images/svg_anciana.svg",
-    "/prod/assets/images/svg_nino_cuerpo.svg": "/prod/assets/images/svg_nino_cuerpo.svg",
-    "/prod/assets/images/svg_nino_mano.svg": "/prod/assets/images/svg_nino_mano.svg",
-    "/prod/assets/images/svg_nino_mano.webp": "/prod/assets/images/svg_nino_mano.webp",
-    "/prod/assets/images/top_gestion_documentos.webp": "/prod/assets/images/top_gestion_documentos.webp",
-    "/prod/assets/images/top_nuestra_empresa.png": "/prod/assets/images/top_nuestra_empresa.png",
-    "/prod/assets/images/top_nuestra_empresa.webp": "/prod/assets/images/top_nuestra_empresa.webp",
-    "/prod/assets/images/top_preguntas_frecuentes.webp": "/prod/assets/images/top_preguntas_frecuentes.webp",
-    "/prod/assets/images/top_renta_vitalicia.webp": "/prod/assets/images/top_renta_vitalicia.webp",
-    "/prod/assets/images/top_rv_pension_invalidez.webp": "/prod/assets/images/top_rv_pension_invalidez.webp",
-    "/prod/assets/images/top_rv_pension_sobreviviencia.webp": "/prod/assets/images/top_rv_pension_sobreviviencia.webp",
-    "/prod/assets/images/top_seguro_previsional.png": "/prod/assets/images/top_seguro_previsional.png",
-    "/prod/assets/images/top_seguro_previsional.webp": "/prod/assets/images/top_seguro_previsional.webp",
-    "/prod/assets/images/vigilado.png": "/prod/assets/images/vigilado.png",
-    "/prod/assets/images/vigilado_vert.png": "/prod/assets/images/vigilado_vert.png",
-    "/prod/assets/js/app.js": "/prod/assets/js/app.js",
-    "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
-    "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
-    "/prod/favicon.ico": "/prod/favicon.ico",
-    "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
-    "/prod/index.html": "/prod/index.html",
-    "/prod/nuestra_empresa/index.html": "/prod/nuestra_empresa/index.html",
-    "/prod/pension_invalidez/index.html": "/prod/pension_invalidez/index.html",
-    "/prod/pension_sobreviviencia/index.html": "/prod/pension_sobreviviencia/index.html",
-    "/prod/preguntas_frecuentes/index.html": "/prod/preguntas_frecuentes/index.html",
-    "/prod/renta_vitalicia/index.html": "/prod/renta_vitalicia/index.html",
-    "/prod/seguro_previsional/index.html": "/prod/seguro_previsional/index.html"
+    "/dist/assets/css/app.css": "/dist/assets/css/app.css"
 }
