--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.16",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "daisyui": "^3.9.3",
     "filename-regex": "^2.0.1",
     "laravel-mix": "^6.0.49",
     "laravel-mix-replace-in-file": "^0.1.0",
