links en el footers, meta tags, documentos pdf

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -26,6 +26,7 @@
     "/prod/assets/images/blog/blog_3.webp": "/prod/assets/images/blog/blog_3.webp",
     "/prod/assets/images/blog/blog_4.jpg": "/prod/assets/images/blog/blog_4.jpg",
     "/prod/assets/images/blog/blog_4.webp": "/prod/assets/images/blog/blog_4.webp",
+    "/prod/assets/images/fb.png": "/prod/assets/images/fb.png",
     "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
     "/prod/assets/images/home_elements.svg": "/prod/assets/images/home_elements.svg",
     "/prod/assets/images/img_anciana.webp": "/prod/assets/images/img_anciana.webp",
@@ -77,6 +78,13 @@
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
+    "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
+    "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/prod/documentos/Estatutos-sociales-Asulado.pdf": "/prod/documentos/Estatutos-sociales-Asulado.pdf",
+    "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
+    "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
+    "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf",
     "/prod/favicon.ico": "/prod/favicon.ico",
     "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
     "/prod/index.html": "/prod/index.html",
