botones chaty whap, footer y documentos read

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -80,10 +80,14 @@
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
     "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/prod/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/prod/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
+    "/prod/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/prod/documentos/Estatutos-sociales-Asulado.pdf": "/prod/documentos/Estatutos-sociales-Asulado.pdf",
+    "/prod/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/prod/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
     "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf",
     "/prod/favicon.ico": "/prod/favicon.ico",
     "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
