--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -100,5 +100,6 @@
     "/prod/seguro_previsional/index.html": "/prod/seguro_previsional/index.html",
     "/prod/solicitudes/index.html": "/prod/solicitudes/index.html",
     "/prod/solicitudes_caso/index.html": "/prod/solicitudes_caso/index.html",
+    "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html"
 }
