--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -35,6 +35,7 @@
     "/prod/assets/images/img_call_center.webp": "/prod/assets/images/img_call_center.webp",
     "/prod/assets/images/img_gestion.png": "/prod/assets/images/img_gestion.png",
     "/prod/assets/images/img_gestion.webp": "/prod/assets/images/img_gestion.webp",
+    "/prod/assets/images/img_gestion2.webp": "/prod/assets/images/img_gestion2.webp",
     "/prod/assets/images/img_ilus_renta_inv.webp": "/prod/assets/images/img_ilus_renta_inv.webp",
     "/prod/assets/images/img_ilus_renta_sob.webp": "/prod/assets/images/img_ilus_renta_sob.webp",
     "/prod/assets/images/img_nino.webp": "/prod/assets/images/img_nino.webp",
@@ -72,6 +73,7 @@
     "/prod/assets/images/top_seguro_previsional.png": "/prod/assets/images/top_seguro_previsional.png",
     "/prod/assets/images/top_seguro_previsional.webp": "/prod/assets/images/top_seguro_previsional.webp",
     "/prod/assets/images/top_solicitudes.webp": "/prod/assets/images/top_solicitudes.webp",
+    "/prod/assets/images/top_suscribete.webp": "/prod/assets/images/top_suscribete.webp",
     "/prod/assets/images/vigilado.png": "/prod/assets/images/vigilado.png",
     "/prod/assets/images/vigilado_vert.png": "/prod/assets/images/vigilado_vert.png",
     "/prod/assets/js/app.js": "/prod/assets/js/app.js",
