modificacion de url de documentos y final carpeta

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,6 +3,17 @@
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
+    "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
+    "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
+    "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf": "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
+    "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
+    "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
+    "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/prod/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
+    "/prod/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/prod/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
     "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
     "/prod/assets/fonts/33112a1a3babe854-s.p.woff": "/prod/assets/fonts/33112a1a3babe854-s.p.woff",
     "/prod/assets/fonts/60964256366d74f2-s.p.woff": "/prod/assets/fonts/60964256366d74f2-s.p.woff",
@@ -80,17 +91,6 @@
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
-    "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
-    "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
-    "/prod/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/prod/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
-    "/prod/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
-    "/prod/documentos/Estatutos-sociales-Asulado.pdf": "/prod/documentos/Estatutos-sociales-Asulado.pdf",
-    "/prod/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
-    "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
-    "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
-    "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
-    "/prod/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/prod/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
-    "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/prod/documentos/Tips-de-ciberseguridad-Asulado.pdf",
     "/prod/favicon.ico": "/prod/favicon.ico",
     "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
     "/prod/index.html": "/prod/index.html",
@@ -103,5 +103,108 @@
     "/prod/solicitudes/index.html": "/prod/solicitudes/index.html",
     "/prod/solicitudes_caso/index.html": "/prod/solicitudes_caso/index.html",
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
-    "/prod/terminos/index.html": "/prod/terminos/index.html"
+    "/prod/terminos/index.html": "/prod/terminos/index.html",
+    "/final/assets/css/app.css": "/final/assets/css/app.css",
+    "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
+    "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
+    "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
+    "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
+    "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
+    "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
+    "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
+    "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
+    "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
+    "/final/assets/fonts/33112a1a3babe854-s.p.woff": "/final/assets/fonts/33112a1a3babe854-s.p.woff",
+    "/final/assets/fonts/60964256366d74f2-s.p.woff": "/final/assets/fonts/60964256366d74f2-s.p.woff",
+    "/final/assets/fonts/7d16627dbfbbee5d-s.p.woff": "/final/assets/fonts/7d16627dbfbbee5d-s.p.woff",
+    "/final/assets/fonts/87cbde00c95e8478-s.p.woff": "/final/assets/fonts/87cbde00c95e8478-s.p.woff",
+    "/final/assets/fonts/ce9abbd2222b7882-s.p.woff": "/final/assets/fonts/ce9abbd2222b7882-s.p.woff",
+    "/final/assets/fonts/e86cc954d8c82a89-s.p.woff": "/final/assets/fonts/e86cc954d8c82a89-s.p.woff",
+    "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff": "/final/assets/fonts/ee0063ed4c3236ca-s.p.woff",
+    "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
+    "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
+    "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
+    "/final/assets/images/TOP/top_solicitudes.png": "/final/assets/images/TOP/top_solicitudes.png",
+    "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
+    "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
+    "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/blog/blog_1.jpg": "/final/assets/images/blog/blog_1.jpg",
+    "/final/assets/images/blog/blog_1.webp": "/final/assets/images/blog/blog_1.webp",
+    "/final/assets/images/blog/blog_2.jpg": "/final/assets/images/blog/blog_2.jpg",
+    "/final/assets/images/blog/blog_2.webp": "/final/assets/images/blog/blog_2.webp",
+    "/final/assets/images/blog/blog_3.jpg": "/final/assets/images/blog/blog_3.jpg",
+    "/final/assets/images/blog/blog_3.webp": "/final/assets/images/blog/blog_3.webp",
+    "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
+    "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
+    "/final/assets/images/fb.png": "/final/assets/images/fb.png",
+    "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
+    "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
+    "/final/assets/images/img_anciana.webp": "/final/assets/images/img_anciana.webp",
+    "/final/assets/images/img_atencion_1.png": "/final/assets/images/img_atencion_1.png",
+    "/final/assets/images/img_atencion_2.png": "/final/assets/images/img_atencion_2.png",
+    "/final/assets/images/img_call_center.webp": "/final/assets/images/img_call_center.webp",
+    "/final/assets/images/img_gestion.png": "/final/assets/images/img_gestion.png",
+    "/final/assets/images/img_gestion.webp": "/final/assets/images/img_gestion.webp",
+    "/final/assets/images/img_gestion2.webp": "/final/assets/images/img_gestion2.webp",
+    "/final/assets/images/img_ilus_renta_inv.webp": "/final/assets/images/img_ilus_renta_inv.webp",
+    "/final/assets/images/img_ilus_renta_sob.webp": "/final/assets/images/img_ilus_renta_sob.webp",
+    "/final/assets/images/img_nino.webp": "/final/assets/images/img_nino.webp",
+    "/final/assets/images/img_novedades_1.png": "/final/assets/images/img_novedades_1.png",
+    "/final/assets/images/img_novedades_1.webp": "/final/assets/images/img_novedades_1.webp",
+    "/final/assets/images/img_novedades_2.png": "/final/assets/images/img_novedades_2.png",
+    "/final/assets/images/img_novedades_2.webp": "/final/assets/images/img_novedades_2.webp",
+    "/final/assets/images/img_novedades_3.png": "/final/assets/images/img_novedades_3.png",
+    "/final/assets/images/img_novedades_3.webp": "/final/assets/images/img_novedades_3.webp",
+    "/final/assets/images/img_proposito.png": "/final/assets/images/img_proposito.png",
+    "/final/assets/images/img_proposito.webp": "/final/assets/images/img_proposito.webp",
+    "/final/assets/images/img_renta.png": "/final/assets/images/img_renta.png",
+    "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
+    "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
+    "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
+    "/final/assets/images/mano_paraque.png": "/final/assets/images/mano_paraque.png",
+    "/final/assets/images/mano_paraque.webp": "/final/assets/images/mano_paraque.webp",
+    "/final/assets/images/mano_porque.png": "/final/assets/images/mano_porque.png",
+    "/final/assets/images/mano_porque.webp": "/final/assets/images/mano_porque.webp",
+    "/final/assets/images/novedades.png": "/final/assets/images/novedades.png",
+    "/final/assets/images/quees_renta_vitalicia.png": "/final/assets/images/quees_renta_vitalicia.png",
+    "/final/assets/images/quees_renta_vitalicia.webp": "/final/assets/images/quees_renta_vitalicia.webp",
+    "/final/assets/images/quees_seguro_revisional.webp": "/final/assets/images/quees_seguro_revisional.webp",
+    "/final/assets/images/svg_anciana.svg": "/final/assets/images/svg_anciana.svg",
+    "/final/assets/images/svg_nino_cuerpo.svg": "/final/assets/images/svg_nino_cuerpo.svg",
+    "/final/assets/images/svg_nino_mano.svg": "/final/assets/images/svg_nino_mano.svg",
+    "/final/assets/images/svg_nino_mano.webp": "/final/assets/images/svg_nino_mano.webp",
+    "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
+    "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
+    "/final/assets/images/top_nuestra_empresa.webp": "/final/assets/images/top_nuestra_empresa.webp",
+    "/final/assets/images/top_preguntas_frecuentes.webp": "/final/assets/images/top_preguntas_frecuentes.webp",
+    "/final/assets/images/top_renta_vitalicia.webp": "/final/assets/images/top_renta_vitalicia.webp",
+    "/final/assets/images/top_rv_pension_invalidez.webp": "/final/assets/images/top_rv_pension_invalidez.webp",
+    "/final/assets/images/top_rv_pension_sobreviviencia.webp": "/final/assets/images/top_rv_pension_sobreviviencia.webp",
+    "/final/assets/images/top_seguro_previsional.png": "/final/assets/images/top_seguro_previsional.png",
+    "/final/assets/images/top_seguro_previsional.webp": "/final/assets/images/top_seguro_previsional.webp",
+    "/final/assets/images/top_solicitudes.webp": "/final/assets/images/top_solicitudes.webp",
+    "/final/assets/images/top_suscribete.webp": "/final/assets/images/top_suscribete.webp",
+    "/final/assets/images/vigilado.png": "/final/assets/images/vigilado.png",
+    "/final/assets/images/vigilado_vert.png": "/final/assets/images/vigilado_vert.png",
+    "/final/assets/js/app.js": "/final/assets/js/app.js",
+    "/final/assets/js/app.js.LICENSE.txt": "/final/assets/js/app.js.LICENSE.txt",
+    "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
+    "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
+    "/final/favicon.ico": "/final/favicon.ico",
+    "/final/gestion_documentos/index.html": "/final/gestion_documentos/index.html",
+    "/final/index.html": "/final/index.html",
+    "/final/nuestra_empresa/index.html": "/final/nuestra_empresa/index.html",
+    "/final/pension_invalidez/index.html": "/final/pension_invalidez/index.html",
+    "/final/pension_sobreviviencia/index.html": "/final/pension_sobreviviencia/index.html",
+    "/final/preguntas_frecuentes/index.html": "/final/preguntas_frecuentes/index.html",
+    "/final/renta_vitalicia/index.html": "/final/renta_vitalicia/index.html",
+    "/final/seguro_previsional/index.html": "/final/seguro_previsional/index.html",
+    "/final/solicitudes/index.html": "/final/solicitudes/index.html",
+    "/final/solicitudes_caso/index.html": "/final/solicitudes_caso/index.html",
+    "/final/suscribete/index.html": "/final/suscribete/index.html",
+    "/final/terminos/index.html": "/final/terminos/index.html"
 }
